tootoo ladybug library

--- a/tootoo/r4/library-ladybug/js/style.css
+++ b/tootoo/r4/library-ladybug/js/style.css
@@ -38,6 +38,6 @@ summary h3 { display: inline; }
 
 #menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }
 #menu ul { margin:0; padding-left:20px; }
-#menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }
+#menuBreadcrumbs h2, #menuBreadcrumbs h3, #mnuUserTitle h3 { font-size: 14pt; margin: 0; }
 
 
