add tootoo anywhere

--- a/tootoo/r5/js-dev/style.css
+++ b/tootoo/r5/js-dev/style.css
@@ -5,8 +5,6 @@ a:hover { text-decoration: underline; }
 a:active { background-color: yellow; }
 aside { font-style: oblique; }
 button, input[type=button] { background-color: #ccc; border: 2px #fff solid; color: #322; }
-iframe, #contents { border: 0px solid red; height: 100%; overflow: hidden; width: 100%; }
-
 pre, blockquote { background-color: #eee; padding: 10px; }
 summary { outline: none; }
 summary h3 { display: inline; }
@@ -40,6 +38,6 @@ summary h3 { display: inline; }
 
 #menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }
 #menu ul { margin:0; padding-left:20px; }
-#menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }
+#menuBreadcrumbs h2, #menuBreadcrumbs h3, #mnuUserTitle h3 { font-size: 14pt; margin: 0; }
 
 
