--- a/tootoo/r6/js/style.css
+++ b/tootoo/r6/js/style.css
@@ -36,8 +36,9 @@ summary h3 { display: inline; }
 #ifr { /* border: 0px yellow solid; */ height: 500px; width: 100%; }
 #ifrHTML { border: 0px yellow solid; margin: 0 8%; height: 100%; padding: 0; width: 100%; }
 
-#menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }
-#menu ul { margin:0; padding-left:20px; }
+#menu { background-color: #eee; border: 1px #ccc solid; box-sizing: border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }
+#menu ul { margin:0; padding-left: 20px; }
+#menu h3, #menu h4, #menu ul { margin-bottom: 0; }
 #menuBreadcrumbs h2, #menuBreadcrumbs h3, #mnuUserTitle h3 { font-size: 14pt; margin: 0; }
 
 
