--- a/tootoo/r6/diana-chace/style-dc.css
+++ b/tootoo/r6/diana-chace/style-dc.css
@@ -1,6 +1,6 @@
 
-html, body { font: 12pt monospace; height: 100%; margin: 0;  overflow: hidden; }
-a { color: rgb( 255, 210, 255 ) ; text-decoration: none; }
+html, body { font: 14pt georgia,"times new roman",times,serif; height: 100%; margin: 0;  overflow: hidden; }
+a { color: rgb( 255, 210, 255 ) ; font-weight: bold; text-decoration: none; }
 a:hover { text-decoration: underline; }
 a:active { background-color: yellow; }
 aside { font-style: oblique; }
@@ -15,7 +15,7 @@ summary h3 { display: inline; }
 
 #container { border: 0px #0f0 solid; height: 100%; left: 0; position: absolute; overflow: hidden; transition: left 1s; width: 100%; }
 
-#contents { border: 0px #f00 solid; height: 100%; left: 325px; overflow-x: hidden; position: absolute; max-width: calc( 100% - 325px); }
+#contents { border: 0px #f00 solid; height: 100%; left: 325px; overflow-x: hidden; position: absolute; overflow: hidden; }
 
 #butEditFile { background-color: #555; color: #fff; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 20px; }
 #butEditFile a { text-decoration: none; color: #fff; }
@@ -27,7 +27,9 @@ summary h3 { display: inline; }
 #butNextFile a, #butPreviousFile a { text-decoration: none; color: #888; }
 #butNextFile:hover, #butPreviousFile:hover { cursor: pointer; opacity: 1; }
 
-#divMD {border: 0px orange solid; margin: 0 auto; max-width: 800px; overflow-x: hidden; position: adsolute; }
+#divGallery { background-color: #a99; border: 0px orange solid; height: 100%; margin: 0 auto; overflow-x: hidden; position: adsolute; }
+#divMD { border: 0px orange solid; margin: 0 auto; max-width: 800px; overflow-x: hidden; position: adsolute; }
+
 
 #hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }
 #hamburger h2, #menuItems h2, #menuItems h4 { margin: 0; }
@@ -36,7 +38,10 @@ summary h3 { display: inline; }
 #ifrHTML { border: 0px yellow solid; margin: 0; height: 100%; padding: 0; width: 100%; }
 
 #menu { background-color: #877; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }
-#menu ul { margin:0; padding-left:20px; }
+#menu ul { padding-left:20px; }
+#menu li { margin-bottom: 20px; }
 #menuBreadcrumbs h2, #menuBreadcrumbs h3, #mnuUserTitle h3 { font-size: 14pt; margin: 0; }
+
+.mnuHighlight { background-color: DarkMagenta; }
 
 
