--- a/tootoo13/cookbook-testing/mnu-menu/style-2019-01-06.css
+++ b/tootoo13/cookbook-testing/mnu-menu/style-2019-01-06.css
@@ -3,10 +3,12 @@
 :root { --mnu-width: 30rem; font-size: 0.7em; }
 
 /* body, html { font: 11pt monospace; height: 100%; margin: 0; overflow: hidden; } */
+
+
 body { box-sizing: border-box; font: 12pt monospace; }
 
 a { color: maroon; font-weight: bold; text-decoration: none; }
-a:hover, a:focus { background-color: yellow; color: #aaa; text-decoration: underline }
+a:hover, a:focus, a:active { background-color: yellow; color: #aaa; text-decoration: underline }
 
 aside { border: 1px solid lightgray; margin-top:15px; padding: 2px; }
 
@@ -46,31 +48,37 @@ summary { cursor: pointer; font-weight: bold; }
 	box-shadow: 2px 2px re#888; }
 
 
-#butHamburger { box-sizing: border-box;
-	font-size: 2rem; left: calc( var( --mnu-width ) + 0rem ); position: fixed; top: 5px; transition: left 0.5s;
-	z-index: 20;
+#butHamburger {  box-sizing: border-box;
+	font-size: 2rem; left: calc( var( --mnu-width ) + 0rem ); position: fixed; top: 5px; transition: left 0.5s; z-index: 20;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); }
 
 
-#navPopUp, #divPopUp { background-color: #eee; border-radius: 8px; display: block; max-height: 95%; max-width: 25%;
-	padding: 0 5px 10px 5px; opacity: 0.95;  overflow: auto; position: fixed; resize: both; right: 1rem;
-	top: 1rem; z-index: 10; };
+#navPopUp, #divPopUp { background-color: #eee; border-radius: 8px; display: block; max-width: 25%; padding: 0 5px 10px 5px;
+	max-height: 95%; overflow: auto; resize: both;
+	opacity: 0.95; right: 1rem; position: fixed; top: 1rem; z-index: 10; };
 
 
+/*
+@media screen and ( max-width: 900px ) {
 
-	@media only screen and (max-width: 600px) {
-
-	  }
-
-
-@media only screen and (max-width: 600px) {
-
-	#navMenu { width: 0; }
-	#butHamburger { left: 1rem; }
-	#divContainer  { left-margin: 0; margin: 0; max-width: 100%; }
+	#navMenu, #butHamburger { left: -23rem; }
+	#divContainer { margin: 0; }
 	#divContents { left: 0; margin: 0; max-width: 100%; }
 
 }
+
+*/
+
+@media screen and ( max-width: 600px ) {
+
+	#navMenu { left: calc( -2rem - var( --mnu-width ) ); }
+	#butHamburger { left: 1rem }
+	#divContents { left: 0; margin: 0; max-width: 100%; }
+
+}
+
+
+
 
 
 
