--- a/tootoo13/js-tootoo13/style.css
+++ b/tootoo13/js-tootoo13/style.css
@@ -25,7 +25,7 @@ summary { cursor: pointer; font-weight: bold; }
 .attributeValue { color: blue; }
 .divMenuTitle { background-color: #ccc; color: #888; margin: 10px 0; text-align: center; }
 .dragDropArea { border: 1px dashed gray; box-sizing: border-box; margin: 10px; padding: 0 10px; }
-.helpItem { float: right; }
+.helpItem { float: right; clear: both; }
 .highlight {background-color: lightgreen }
 
 #divContainer { height: 100%; margin: 0 0 0 var( --mnu-width ); transition: margin-left .5s; position: relative; }
